# SLOTHE

./: .gitignore  CMakeLists.txt  README.md  _tanh.c  _tanh.ll  _tanh_RemoveSpecials.ll  checkPrec.cpp  checkValid.sh  isMergeable.cpp  pathMerge.sh  pathMerge2.sh  run.sh  runFunc.cpp
dev/yyjoo/branchStepTest/: _erf.cpp  _erf.hpp  main.hpp
dev/yyjoo/optimTest/: Makefile  _acosh.cpp  _acosh.hpp  _erf.cpp  _erf.hpp  common.hpp  main.cpp  main.hpp  optimize.cpp  optimize.hpp
dev/yyjoo/plainLAsTest/: Makefile  func.cpp  func.hpp  main.cpp  main.hpp  run.sh
dev/yyjoo/plainNAsTest/: Makefile  asor.cpp  asor.hpp  main.cpp  main.hpp
dev/yyjoo/plainPAsTest/: Makefile  main.cpp  main.hpp
dev/yyjoo/polyApproxTest/: main.cpp  main.hpp
heRun/: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp
heRun/include/: helper.hpp  main.hpp  naafs.hpp  plainNaafs.hpp
heRun/src/: helper.cpp  naaf.cpp  plainNaafs.cpp
heRun/src/polyLists/: tanh_PA.cpp
include/: BasicTrace.h  CostEstimation.h  CountCond.h  GetDivisorRange.h  GetFuncRange.h  Merge.h  Mergeable.h  OpAnalyzer.h  RemoveSpecials.h  ReplaceDiv.h  ReplaceDivtoMul.h  ReplaceFunc.h  ReplaceIcmp.h  Swap.h  TimeEstimation.h  Unreachable.h  UnreachablePath.h  readOpTime.h
jylee/: README.md  trans.cpp
kvnam/: a.out  binary_to_double.cpp
math/: _acosh.c  _erf.c  _exp.c  _expm1.c  _gelu.c  _icmp.c  _inverse.c  _mish.c  _relu.c  _sigmoid.c  _softplus.c  _sqrt.c  _swish.c  _tanh.c  naf.h
scripts/: FBA.sh  Optional.sh  SLOTHE.sh  baseline.sh  build.sh  cf_optimizer.sh  cf_optimizer_pathMerge.sh  checkErr.cpp  checkErr.sh  checkMax.cpp  checkMerge.cpp  checkPrec.cpp  checkTime.sh  checkValid.sh  clean.sh  install.sh  optional.sh  pathMerge.sh  printResults.sh  run.sh  run_FBA.sh  run_examples.sh  run_lolremez.sh  time.csv  unreachable.sh
src/: BasicTrace.cpp  CMakeLists.txt  CostEstimation.cpp  CountCond.cpp  GetDivisorRange.cpp  GetFuncRange.cpp  Merge.cpp  Mergeable.cpp  OpAnalyzer.cpp  RemoveSpecials.cpp  ReplaceDiv.cpp  ReplaceDivtoMul.cpp  ReplaceFunc.cpp  ReplaceIcmp.cpp  Swap.cpp  TimeEstimation.cpp  Unreachable.cpp  UnreachablePath.cpp
utils/: checkPrec.cpp  checkPrecVal.cpp  isMergeable.cpp  optim.cpp
yyjoo/: Makefile  main.cpp  run.sh  stepTest  stepTest.cpp
